--- a/.github/workflows/publish-doc.yml
+++ b/.github/workflows/publish-doc.yml
@@ -32,4 +32,5 @@ jobs:
     - name: Publish documentation to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@4.1.7
       with:
+        branch: main
         folder: docs
