; in bash script publish doc

--- a/.github/workflows/publish-doc.yml
+++ b/.github/workflows/publish-doc.yml
@@ -35,5 +35,6 @@ jobs:
     - name: Publish documentation to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@4.1.7
       with:
-        branch: main
+        branch: gh-pages
         folder: docs
+        single-commit: true
